# yclientsapi

./: .gitignore  pyproject.toml
docs/yclients_official/: yclientsru.apib
src/yclientsapi/: __init__.py  activity.py  auth.py  config.py  exceptions.py  headers.py  main.py  record.py  salary.py  schedule.py  sender.py  service.py  staff.py  utils.py
src/yclientsapi/components/: activity.py  auth.py  record.py  staff.py
src/yclientsapi/schema/: activity.py  auth.py  record.py  salary.py  service.py  staff.py  webhook.py
src/yclientsapi/tests/: README.md
src/yclientsapi/tests/integration/: conftest.py
src/yclientsapi/tests/integration/src/test_data/: activity.py
src/yclientsapi/tests/integration/src/tests/: test_activity.py  test_auth.py  test_record.py  test_salary.py  test_service.py  test_staff.py
src/yclientsapi/tests/unit/: .env.example  conftest.py  vars.py
src/yclientsapi/tests/unit/src/test_data/real/: salary.py
src/yclientsapi/tests/unit/src/tests/: test_activity.py  test_auth.py  test_record.py  test_salary.py  test_service.py  test_staff.py
