[tool.poetry]
name = "poor_yclientsapi"
version = "0.1.0"
description = "Poor collection of API methods for Yclients app"
authors = ["Maksim Kosinov <mkosinov@mail.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mkosinov/yclientsapi"
packages = [{include = "src"}]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
